# cargo-sanitize

./: 404.html  Cargo.toml  README.md  index.html  mkdocs.yml
docs/: index.md
resources/: Cargo.test.toml
search/: search_index.json
src/: main.rs
